Angular 17 upgrade - dialog and start of charts - not finished

--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -145,3 +145,11 @@
 .credits-available{
 	color:green;
 }
+
+ dialog {
+	overflow: hidden;
+	padding:0px;
+	border:none;
+	width:50%;
+	min-width:280px;
+}
