--- a/recruit-gui/src/app/email/email.component.css
+++ b/recruit-gui/src/app/email/email.component.css
@@ -179,3 +179,11 @@ tr:nth-child(even){
 	margin-top:50px;
 	height:150px;
 }
+
+dialog {
+	overflow: hidden;
+	padding:0px;
+	border:none;	
+	width:50%;
+	min-width:280px;
+}
