--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -99,7 +99,6 @@
     font-size: medium;
     height: 50px;
     text-align:center;
-    width:500px;
     padding:0px;
     margin:0px;
     
@@ -374,7 +373,7 @@ a {
 
 textarea {
     width:100%;
-    height:90px;
+    height:60px;
 }
 
 .job-spec-upld-opt{
@@ -390,4 +389,12 @@ textarea {
 
 .job-spec-upld-opt:hover{
 	background:grey;
+}
+
+ dialog {
+	overflow: hidden;
+	padding:0px;
+	border:none;
+	width:50%;
+	min-width:350px;
 }
