--- a/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.css
+++ b/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.css
@@ -203,11 +203,19 @@ table tr th{
 
 textarea {
     width:100%;
-    height:200px;
+    height:180px;
 }
 
 .no-account{
 	text-align:center;
 	font-weight:bold;
 	margin-top:120px;
+}
+
+ dialog {
+	overflow: hidden;
+	padding:0px;
+	border:none;
+	width:50%;
+	min-width:280px;
 }
