--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -1,7 +1,10 @@
 <div class=".container m-2">
-	
 	<div>
-
+	
+		
+		
+    	
+	
 		<!-- Action buttons -->
 		<div class="action-buttons">
 			<button class="btn btn-secondary btnRight" (click)="refreshData()" download>Refresh</button>
@@ -28,45 +31,170 @@
 		  </li>
 		</ul>
 		
-		<!-- Logins -->
-		<div *ngIf="showStatsLogins">
-					
-			<div class="chart-wrapper-page">		
-				<div class="chart-wrapper">
+		<!--  Define charts -->
+		<div class="border-top">
+			<div class="stat-canvas">
+				<!-- Logins -->
+				<div *ngIf="showStatsLogins">
 					<h3>Logins</h3>
 					<button (click)="switchLoginStats('year')">Year</button>
 					<button (click)="switchLoginStats('3months')">3 Months</button>
 					<button (click)="switchLoginStats('week')">Week</button>
-	   	 			<canvas baseChart 
-	        				[datasets]="loginChartData" 
-	        				[labels]="loginChartLabels" 
-	        				[options]="loginChartOptions"
-	        				[colors]="loginChartColors" 
-	        				[legend]="loginChartLegend" 
-	        				[chartType]="loginChartType" 
-	       			 		[plugins]="loginChartPlugins">
-	   				 </canvas>
 				</div>
-							
-				<div class="chart-wrapper" *ngIf="loginChartView == 'chart'">
+				<!-- Downloads -->
+				<div *ngIf="showStatsDownloads" style="margin-bottom:45px;">
+					<h3>Daily downloads</h3>
+				</div>
+				<div>
+					<canvas  id="leftChart" >{{ leftChart }}</canvas>	
+				</div>
+			</div>
+			<div class="stat-canvas">
+				<!-- Logins -->
+				<div *ngIf="showStatsLogins">
 					<h3>logins: Recruiters: {{loginCountRecruiter}} Candidates: {{loginCountCandidate}}</h3>
-					<button (click)="switchUserStatsView('table')" class="toggle-view">Table</button>
 					<button (click)="switchUserStats('week')">This Week</button>
 					<button (click)="switchUserStats('today')">Today</button>
-					<canvas baseChart 
-	        				[datasets]="recruiterLoginsChartData" 
-	        				[labels]="recruiterLoginsChartLabels" 
-	        				[options]="recruiterLoginsChartOptions"
-	        				[colors]="recruiterLoginsChartColors" 
-	        				[legend]="recruiterLoginsChartLegend" 
-	        				[chartType]="recruiterLoginsChartType" 
-	        				[plugins]="recruiterLoginsChartPlugins">
-	    			</canvas>
+				</div>	
+					
+				<!-- Downloads -->
+				<div *ngIf="showStatsDownloads">
+					<h3>Recruiter downloads: {{chartDownloadsTotal}}</h3>
+					<button (click)="switchChartData('week')">This week</button>
+					<button (click)="switchChartData('day')">Today</button>
 				</div>
 				
-				<div class="chart-wrapper" *ngIf="loginChartView == 'table'">
+				<div>
+					<canvas  id="rightChart">{{ rightChart }}</canvas>	
+				</div>
+			</div>
+		</div>
+		
+
+				
+		<!-- Downloads -->
+		<!-- 
+		<div *ngIf="showStatsDownloads">
+					
+			<div class="chart-wrapper-page">		
+				<div class="chart-wrapper">
+					<h3>Daily downloads</h3>
+					<canvas baseChart 
+	        				[datasets]="lineChartData" 
+	        				[labels]="lineChartLabels" 
+	        				[options]="lineChartOptions"
+	        				[colors]="lineChartColors" 
+	        				[legend]="lineChartLegend" 
+	        				[chartType]="lineChartType" 
+	       			 		[plugins]="lineChartPlugins">
+	   				 </canvas>
+	   			</div>
+							
+				<div class="chart-wrapper">
+					<h3>Recruiter downloads: {{chartDownloadsTotal}}</h3>
+					<button (click)="switchChartData('week')">This week</button>
+					<button (click)="switchChartData('day')">Today</button>
+	    			<canvas baseChart 
+	        				[datasets]="recruiterDownloadsChartData" 
+	        				[labels]="recruiterDownloadsChartLabels" 
+	        				[options]="recruiterDownloadsChartOptions"
+	        				[colors]="recruiterDownloadsChartColors" 
+	        				[legend]="recruiterDownloadsChartLegend" 
+	        				[chartType]="recruiterDownloadsChartType" 
+	        				[plugins]="recruiterDownloadsChartPlugins">
+	    			</canvas>
+
+				</div>
+			</div>
+		
+		</div>
+		-->
+		<!-- Listings -->
+		<div *ngIf="showStatsListings">
+			
+			<div class="chart-wrapper">
+				<h5>Totals:</h5>
+				<table>
+					<tr>
+						<td>Listings viewed today</td>
+						<td>{{listingViewsToday}}</td>
+					</tr>
+					<tr>
+						<td>Listings viewed this week</td>
+						<td>{{listingViewsThisWeek}}</td>
+					</tr>
+				</table>
+			</div>
+			<div class="chart-wrapper">
+				<h5>Available by Function</h5>
+				<!--  
+ 					<canvas baseChart 
+     					[datasets]="listingChartData" 
+     					[labels]="listingChartLabels" 
+     					[options]="listingChartOptions"
+     					[colors]="listingChartColors" 
+     					[legend]="listingChartLegend" 
+     					[chartType]="listingChartType" 
+     					[plugins]="listingChartPlugins">
+  					</canvas>
+  					-->
+			</div>			
+		</div>
+		
+		<!-- Marketplace Views -->
+		<div *ngIf="showMarketplaceStats">		
+			<div class="chart-wrapper">			
+				<h3>Requested Candidate Views: {{requestedCandidateViewsTotal}}</h3>
+				<button (click)="switchMarketplaceRequestedCandidatesChartData('week')">This week</button>
+				<button (click)="switchMarketplaceRequestedCandidatesChartData('day')">Today</button>
+				<!--  
+    			<canvas baseChart 
+        				[datasets]="marketPlaceEventsChartDataRequested" 
+        				[labels]="marketPlaceEventsChartLabelsRequested" 
+        				[options]="marketPlaceEventsChartOptions"
+        				[colors]="marketPlaceEventsChartColors" 
+        				[legend]="marketPlaceEventsChartLegend" 
+        				[chartType]="marketPlaceEventsChartType" 
+        				[plugins]="marketPlaceEventsChartPlugins">
+    			</canvas>
+    			-->
+			</div>			
+		</div>
+			
+		<!-- Availability -->
+		<div *ngIf="showStatsAvailability">
+			<div class="chart-wrapper">
+				<h5>Totals:</h5>
+				<table>
+					<tr>
+						<td>Active Users</td>
+						<td>{{totalNumberActiveCandidates}}</td>
+					</tr>
+				</table>
+			</div>
+			<div class="chart-wrapper">
+				<h5>Available by Function</h5>
+				<!--  
+ 						<canvas baseChart 
+     						[datasets]="functionChartData" 
+     						[labels]="functionChartLabels" 
+     						[options]="functionChartOptions"
+     						[colors]="functionChartColors" 
+     						[legend]="functionChartLegend" 
+     						[chartType]="functionChartType" 
+     						[plugins]="functionChartPlugins">
+  					</canvas>
+  					-->
+			</div>	
+		</div>	
+		
+				<!-- Logins -->
+		<div *ngIf="showStatsLogins">
+					
+			<div class="chart-wrapper-page">		
+				
+				<div class="chart-wrapper">
 					<h3>logins: Recruiters: {{loginCountRecruiter}} Candidates: {{loginCountCandidate}}</h3>
-					<button (click)="switchUserStatsView('chart')"  class="toggle-view">Chart</button>
 					<button (click)="switchUserStats('week')">This Week</button>
 					<button (click)="switchUserStats('today')">Today</button>
 					<div class="login-table-view">
@@ -76,7 +204,7 @@
 									<th>User</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody>  
 								<tr *ngFor="let user of recruiterLoginsChartLabels" (click)="switchUserStatsView('table', user)">
 									<td>{{user}}</td>
 								</tr>
@@ -84,8 +212,10 @@
 						</table>
 					</div>
 				</div>
-				<div class="chart-wrapper" *ngIf="loginChartView == 'table'">
+				<div class="chart-wrapper">
 					<h3>Searches</h3>
+					<button (click)="switchUserStats('week')">This Week</button>
+					<button (click)="switchUserStats('today')">Today</button>
 					<div class="recruiter-stats">
 					<table style="width:100%">
 							<thead>
@@ -108,114 +238,8 @@
 					</div>
 				</div>
 			</div>
+			<div style="clear:both;margin-bottom:50px;"></div>
 		</div>
-				
-		<!-- Downloads -->
-		<div *ngIf="showStatsDownloads">
-					
-			<div class="chart-wrapper-page">		
-				<div class="chart-wrapper">
-					<h3>Daily downloads</h3>
-	   	 			<canvas baseChart 
-	        				[datasets]="lineChartData" 
-	        				[labels]="lineChartLabels" 
-	        				[options]="lineChartOptions"
-	        				[colors]="lineChartColors" 
-	        				[legend]="lineChartLegend" 
-	        				[chartType]="lineChartType" 
-	       			 		[plugins]="lineChartPlugins">
-	   				 </canvas>
-				</div>
-							
-				<div class="chart-wrapper">
-					<h3>Recruiter downloads: {{chartDownloadsTotal}}</h3>
-					<button (click)="switchChartData('week')">This week</button>
-					<button (click)="switchChartData('day')">Today</button>
-	    			<canvas baseChart 
-	        				[datasets]="recruiterDownloadsChartData" 
-	        				[labels]="recruiterDownloadsChartLabels" 
-	        				[options]="recruiterDownloadsChartOptions"
-	        				[colors]="recruiterDownloadsChartColors" 
-	        				[legend]="recruiterDownloadsChartLegend" 
-	        				[chartType]="recruiterDownloadsChartType" 
-	        				[plugins]="recruiterDownloadsChartPlugins">
-	    			</canvas>
-				</div>
-			</div>
-		</div>
-		
-		<!-- Listings -->
-		<div *ngIf="showStatsListings">
-			
-			<div class="chart-wrapper">
-				<h5>Totals:</h5>
-				<table>
-					<tr>
-						<td>Listings viewed today</td>
-						<td>{{listingViewsToday}}</td>
-					</tr>
-					<tr>
-						<td>Listings viewed this week</td>
-						<td>{{listingViewsThisWeek}}</td>
-					</tr>
-				</table>
-			</div>
-			<div class="chart-wrapper">
-				<h5>Available by Function</h5>
- 					<canvas baseChart 
-     					[datasets]="listingChartData" 
-     					[labels]="listingChartLabels" 
-     					[options]="listingChartOptions"
-     					[colors]="listingChartColors" 
-     					[legend]="listingChartLegend" 
-     					[chartType]="listingChartType" 
-     					[plugins]="listingChartPlugins">
-  					</canvas>
-			</div>			
-		</div>
-		
-		<!-- Marketplace Views -->
-		<div *ngIf="showMarketplaceStats">		
-			<div class="chart-wrapper">			
-				<h3>Requested Candidate Views: {{requestedCandidateViewsTotal}}</h3>
-				<button (click)="switchMarketplaceRequestedCandidatesChartData('week')">This week</button>
-				<button (click)="switchMarketplaceRequestedCandidatesChartData('day')">Today</button>
-    			<canvas baseChart 
-        				[datasets]="marketPlaceEventsChartDataRequested" 
-        				[labels]="marketPlaceEventsChartLabelsRequested" 
-        				[options]="marketPlaceEventsChartOptions"
-        				[colors]="marketPlaceEventsChartColors" 
-        				[legend]="marketPlaceEventsChartLegend" 
-        				[chartType]="marketPlaceEventsChartType" 
-        				[plugins]="marketPlaceEventsChartPlugins">
-    			</canvas>
-			</div>			
-		</div>
-			
-		<!-- Availability -->
-		<div *ngIf="showStatsAvailability">
-			<div class="chart-wrapper">
-				<h5>Totals:</h5>
-				<table>
-					<tr>
-						<td>Active Users</td>
-						<td>{{totalNumberActiveCandidates}}</td>
-					</tr>
-				</table>
-			</div>
-			<div class="chart-wrapper">
-				<h5>Available by Function</h5>
- 						<canvas baseChart 
-     						[datasets]="functionChartData" 
-     						[labels]="functionChartLabels" 
-     						[options]="functionChartOptions"
-     						[colors]="functionChartColors" 
-     						[legend]="functionChartLegend" 
-     						[chartType]="functionChartType" 
-     						[plugins]="functionChartPlugins">
-  					</canvas>
-			</div>	
-		</div>	
 		
 		<!-- New Candidate Stats -->
 		<div *ngIf="showNewCandidates" class="stats-table">
