--- a/recruit-gui/src/app/create-candidate/create-candidate.component.css
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.css
@@ -13,7 +13,7 @@
     width:300px;
     height:500px;
 }
-
+/*
 .modal-header{
     background: #303030;
     font-size: medium;
@@ -23,7 +23,7 @@
     margin:0px;
     
 }
-
+*/
 .modal-header-text{
     text-align:center;
     color:#6f42c1;
@@ -36,25 +36,27 @@
     width:200px;
     height:350px;
 }
-
+/*
 .modal-body{
     font-size: large;
     height:200px;
     text-align: center;
 }
-
+*/
+/*
 .modal-body-text{
     vertical-align: middle;
     margin-top: 50px;
     font-weight: bold;
 }
-
+*/
+/*
  .modal-header{
      background:#181414;
      color:#6A5ACD;
      font-weight:bold;
  }
-
+*/
  .filter-close-box{
      padding:10px;
      cursor:pointer;
@@ -113,12 +115,3 @@ textarea{
 .hide-row{
 	display:none;
 }
-
-dialog {
-	overflow: hidden;
-	padding:0px;
-	border:none;
-	
-}
-
-
