--- a/recruit-gui/src/app/login-user/login-user.component.css
+++ b/recruit-gui/src/app/login-user/login-user.component.css
@@ -20,7 +20,7 @@ input{
     float:right;
     margin-right:20px;
 }
-
+/*
 .modal-header{
     background: #303030;
     font-size: medium;
@@ -29,27 +29,28 @@ input{
     padding:0px;
     margin:0px;
 }
-
+*/
 .modal-header-text{
     text-align:center;
     color:#6f42c1;
     margin-top:10px;
     width:500px;
 }
-
+/*
 .modal-body{
 	margin-top:100px;
 	font-size: large;
     height:200px;
     text-align: center;
 }
-
+*/
+/*
 .modal-body-text{
     vertical-align: middle;
     margin-top: 60px;
     font-weight: bold;
 }
-
+*/
  .modal-header{
      background:#181414;
      color:#6A5ACD;
@@ -116,12 +117,4 @@ input{
 
 .new-subscription h3{
 	font-size:14px;
-}
-
-dialog {
-	overflow: hidden;
-	padding:0px;
-	border:none;
-	width:50%;
-	min-width:280px;
 }
