--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -99,23 +99,25 @@
 .signup-candidate{
 	background:green;
 }
-
+/*
 .modal-body{
     font-size: large;
     height:400px;
     text-align: center;
 }
-
+*/
+/*
 .modal-title{
 	margin-left:20px;
 }
-
+*/
+/*
 .modal-header{
      background:#181414;
      color:#6A5ACD;
      font-weight:bold;
 }
-
+*/
 .filter-close-box{
 	cursor:pointer;
 }
@@ -144,12 +146,4 @@
 
 .credits-available{
 	color:green;
-}
-
- dialog {
-	overflow: hidden;
-	padding:0px;
-	border:none;
-	width:50%;
-	min-width:280px;
 }
