--- a/recruit-gui/src/app/email/email.component.css
+++ b/recruit-gui/src/app/email/email.component.css
@@ -147,23 +147,25 @@ tr:nth-child(even){
 .no-emails{
 	text-align:center;
 }
-
+/*
 .modal-body{
     font-size: large;
     height:400px;
     text-align: center;
 }
-
+*/
+/*
 .modal-title{
 	margin-left:20px;
 }
-
+*/
+/*
 .modal-header{
      background:#181414;
      color:#6A5ACD;
      font-weight:bold;
 }
-
+*/
 .modal-body textarea{
 	width:100%;
 	height:310px;
@@ -178,12 +180,4 @@ tr:nth-child(even){
 	min-height:200px;
 	margin-top:50px;
 	height:150px;
-}
-
-dialog {
-	overflow: hidden;
-	padding:0px;
-	border:none;	
-	width:50%;
-	min-width:280px;
 }
