--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -93,7 +93,7 @@
     width:300px;
     height:500px;
 }
-
+/*
 .modal-header{
     background: #303030;
     font-size: medium;
@@ -103,7 +103,7 @@
     margin:0px;
     
 }
-
+*/
 .modal-header-text{
     text-align:center;
     color:#6f42c1;
@@ -116,28 +116,32 @@
     width:200px;
     height:350px;
 }
-
+/*
 .modal-body{
     font-size: large;
     height:200px;
     text-align: center;
 }
-
+*/
+/*
 .modal-body-text{
     vertical-align: middle;
     margin-top: 60px;
     font-weight: bold;
 }
-
+*/
+/*
  .modal-header{
      background:#181414;
      color:#6A5ACD;
      font-weight:bold;
  }
-
+*/
+/*
 .modal-title{
 	margin-left:20px;
 }
+*/
 
 .filter-close-box{
      padding:10px;
@@ -347,23 +351,25 @@ a {
 	margin-top:5px;
 	
 }
-
+/*
 .modal-title{
 	margin-left:20px;
 }
-
+*/
+/*
 .modal-body{
 	font-size: large;
 	height:200px;
 	text-align: center;
 }
-
+*/
+/*
 .modal-body-text{
 	vertical-align: middle;
 	margin-top: 60px;
 	font-weight: bold;
 }
-
+*/
 .feedbackBox{
 	padding:20px;
 	min-height:200px;
@@ -373,9 +379,10 @@ a {
 
 textarea {
     width:100%;
-    height:60px;
+    height:200px;
 }
 
+/*
 .job-spec-upld-opt{
 	float:left;
 	width:90%;
@@ -390,11 +397,4 @@ textarea {
 .job-spec-upld-opt:hover{
 	background:grey;
 }
-
- dialog {
-	overflow: hidden;
-	padding:0px;
-	border:none;
-	width:50%;
-	min-width:350px;
-}
+*/
