--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
@@ -179,23 +179,25 @@ td{
 .as-link{
 	cursor:pointer;	
 }
-
+/*
 .modal-title{
 	margin-left:20px;
 }
-
+*/
+/*
 .modal-body{
 	font-size: large;
 	height:300px;
 	text-align: center;
 }
-
+*/
+/*
 .modal-header{
 	background:#181414;
 	color:#6A5ACD;
 	font-weight:bold;
 }
-
+*/
 .filter-close-box{
 	padding:10px;
 	cursor:pointer;
@@ -294,19 +296,20 @@ td{
 .modal-title{
 	margin-left:20px;
 }
-
+/*
 .modal-body{
 	font-size: large;
 	height:300px;
 	text-align: center;
 }
-
+*/
+/*
 .modal-body-text{
 	vertical-align: middle;
 	margin-top: 60px;
 	font-weight: bold;
 }
-
+*/
 .feedbackBox{
 	padding:20px;
 	min-height:200px;
@@ -321,12 +324,4 @@ td{
 
 .listing-view-div{
 	margin-top:10px;
-}
-
- dialog {
-	overflow: hidden;
-	padding:0px;
-	border:none;
-	width:50%;
-	min-width:380px;
 }
