--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -394,7 +394,7 @@
 		<h4 class="modal-title">Extract Filters</h4>
  		<div class="filter-close-box" (click)="specUploadBox.close()">X</div>
 	</div>
-	<div class="feedbackBox;">
+	<div class="specUploadBox;">
 		<div class="modal-body" *ngIf="showFilterByJobSpec && jobSpecUploadView == 'chooseType'">
 			<p>Please choose how to upload the job specification to filter on</p>
 			<div class="job-spec-options">
