--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -106,3 +106,57 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 	padding:5px;
 	margin-right:10px;
 }
+
+
+/*START DIALOG CSS*/
+.modal-title{
+	margin-left:20px;
+}
+
+.modal-body{
+	font-size: large;
+	text-align: center;
+}
+
+.modal-body-text{
+	vertical-align: middle;
+	margin-top: 60px;
+	font-weight: bold;
+}
+
+.modal-header{
+	background:#181414;
+	color:#6A5ACD;
+	font-weight:bold;
+}
+
+dialog {
+	overflow: hidden;
+	padding:0px;
+	border:none;
+	width:50%;
+	min-width:320px;
+}
+
+/*Dialog upload spec*/
+.job-spec-options{
+	width:100%;
+	margin:auto;
+}
+
+.job-spec-upld-opt{
+	float:left;
+	min-width:280px;
+	margin:2%;
+	border:2px green solid;
+	cursor:pointer;
+	padding:20px;
+	font-weight:bold;
+	width:45%;
+}
+
+.job-spec-upld-opt:hover{
+	background:grey;
+}
+
+/*END DIALOG CSS*/
